--- a/templates/add.html
+++ b/templates/add.html
@@ -1,18 +1,16 @@
-<html>
-<head></head>
-<body>
-    <div>
+{% extends 'base.html' %}
+{% block content %}
+    
+    <h1>Add note</h1>
         <form action="" method="post">
             {% csrf_token %}
             Title: <input type="text" name="title"
-            placeholder="enter title...">
+            placeholder="enter title..." class="form-control">
             <br>
-            Note: <input type="text" name="note" 
-            placeholder="enter note...">
+            Note: <textarea name="note" 
+            placeholder="enter note..." class="form-control"></textarea>
             <br>
-            <input type="submit">
+            <input type="submit" class="btn btn-default">
         </form>
 
-    </div>
-</body>
-</html>
+{% endblock %}
