--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,29 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Edit </title>
-	<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-</head>
-<body>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-5">
+{% extends 'base.html' %}
+{% block content %}
+    <h1>Edit Note:</h1>
 			<form action="" method="post">
 				{% csrf_token %}
 				<input type="text" name="title" class="form-control"  value="{{ note.title }}">
-				<input type="text" name="note" class="form-control"  value="{{ note.note }}">
+				<textarea name="note" class="form-control"  >{{ note.note }}</textarea> 
 				<input type="submit" class="btn btn-default" name="" value="save">
 			</form>	
-			</div>
-
-		
-			
-		 
-
-				
-
-		</div>
-	
-	</div>
-</body>
-</html>
+{% endblock %}
