--- a/templates/list.html
+++ b/templates/list.html
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-</head>
-<body>
-<div class="container">
-	<div class="row">
-			<div class="col-md-12">		
 
+{% extends 'base.html' %}
+{% block content %}
 			<h1>Notes:</h1>
 			<a class="btn btn-primary" href="{% url 'note_add' %}">Add</a><br>
 				<table class="table table-bordered">
@@ -27,8 +19,4 @@
 				    {% endfor %}
 				</tbody>
 				</table>
-			</div>
-	</div>
-</div>
-</body>
-</html>
+{% endblock %}
